# workspace

./: .gitignore  .workspace.toml  CLAUDE.md  README.md  pyproject.toml
tests/: conftest.py  test_cli_commands.py  test_config.py  test_git_operations.py  test_task_management.py  test_tmux_process_detection.py  test_workspace_creation.py  test_workspace_operations.py
tests/fixtures/example_project/: .workspace.toml  README.md
workspace/cli/: __init__.py  main.py
workspace/core/: __init__.py  agent.py  config.py  config_manager.py  git.py  task.py  workspace.py
workspace/utils/: __init__.py
